# CppP2PChat

./: .gitignore  CMakeLists.txt  README.md  Readme.md  b  build.sh  r  test_communication.sh
Include/: CliInterface.hpp  Crypto.hpp  Message.hpp  Network.hpp  PeerManager.hpp  Readme.md
Source/: CliInterface.cpp  Crypto.cpp  Main.cpp  Message.cpp  Network.cpp  Network_coroutines_wip.cpp  PeerManager.cpp  Readme.md
Tests/: Readme.md  TestCliInterface.cpp  TestCrypto.cpp  TestMessage.cpp  TestNetwork.cpp  TestPeerManager.cpp
include/: cli_interface.hpp  crypto.hpp  message.hpp  network.hpp  peer_manager.hpp
src/: cli_interface.cpp  crypto.cpp  main.cpp  message.cpp  network.cpp  peer_manager.cpp
tests/: test_crypto.cpp  test_message.cpp  test_peer_manager.cpp
